--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   provider: ^6.0.5
   cloud_firestore: ^4.4.3
   firebase_messaging: ^14.2.5
+  flutter_local_notifications: ^13.0.0
 
 dev_dependencies:
   flutter_test:
