--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.chat">
+    package="com.asdfg.chat">
    <application
-        android:label="ChatAt"
+        android:label="Chatat"
         android:name="${applicationName}"
         android:icon="@mipmap/chat_icon">
         <activity
